# pyldapsearch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
pyldapsearch/: __main__.py
