[project]
name = "pyldapsearch"
version = "0.1.9"
description = "Tool for issuing manual LDAP queries which offers bofhound compatible output"
authors = [{ name = "Matt Creel" }, { name = "Adam Brown" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cffi>=1.17.1",
    "click==8.1.8",
    "impacket>=0.10.0",
    "msldap>=0.5.15",
    "pyasn1>=0.4.8",
    "pycryptodome>=3.20.0",
    "rich>=12.5.1",
    "setuptools>=75.8.2",
    "typer>=0.9",
]

[project.urls]
Homepage = "https://github.com/fortalice/pyldapsearch"
Repository = "https://github.com/fortalice/pyldapsearch"

[project.scripts]
pyldapsearch = "pyldapsearch.__main__:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
